<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintWidth_percent="0.25"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOperacionesAritmeticas" />

    <Button
        android:id="@+id/btnMc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btnmc"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResultado"
        app:layout_constraintWidth_percent="0.25"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnMmas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btnmmas"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintStart_toEndOf="@+id/btnMc"
        app:layout_constraintTop_toTopOf="@+id/btnMc"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnMmenos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btnmmenos"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintStart_toEndOf="@+id/btnMmas"
        app:layout_constraintTop_toTopOf="@+id/btnMmas"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnMere"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btnmr"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintStart_toEndOf="@+id/btnMmenos"
        app:layout_constraintTop_toTopOf="@+id/btnMmenos"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/tbnClear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btnc"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMc"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnDividir"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/label_signo_division"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintStart_toEndOf="@+id/tbnClear"
        app:layout_constraintTop_toTopOf="@+id/tbnClear"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnMultiplicar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btnmultiplicar"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintStart_toEndOf="@+id/btnDividir"
        app:layout_constraintTop_toTopOf="@+id/btnDividir"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btnborrar"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintStart_toEndOf="@+id/btnMultiplicar"
        app:layout_constraintTop_toTopOf="@+id/btnMultiplicar"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnNum7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btnnro9"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbnClear"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnNum8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btnnro8"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintStart_toEndOf="@+id/btnNum7"
        app:layout_constraintTop_toTopOf="@+id/btnNum7"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnNum9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btnnro9"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintStart_toEndOf="@+id/btnNum8"
        app:layout_constraintTop_toTopOf="@+id/btnNum8"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnRestar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btnmenos"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintStart_toEndOf="@+id/btnNum9"
        app:layout_constraintTop_toTopOf="@+id/btnNum9"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnNum4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btnnro5"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNum7"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnNum5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btnnro5"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintStart_toEndOf="@+id/btnNum4"
        app:layout_constraintTop_toTopOf="@+id/btnNum4"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnNum6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btnnro6"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintStart_toEndOf="@+id/btnNum5"
        app:layout_constraintTop_toTopOf="@+id/btnNum5"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnSumar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btnmas"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintStart_toEndOf="@+id/btnNum6"
        app:layout_constraintTop_toTopOf="@+id/btnNum6"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnNum1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btnnro1"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNum4"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnNum2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btnnro2"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintStart_toEndOf="@+id/btnNum1"
        app:layout_constraintTop_toTopOf="@+id/btnNum1"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnNum3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btnnro3"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintStart_toEndOf="@+id/btnNum2"
        app:layout_constraintTop_toTopOf="@+id/btnNum2"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnIgual"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btnnroigual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintStart_toEndOf="@+id/btnNum3"
        app:layout_constraintTop_toTopOf="@+id/btnNum3"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnPorcentaje"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btnporcentaje"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNum1"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnNum0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btnnro0"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintStart_toEndOf="@+id/btnPorcentaje"
        app:layout_constraintTop_toTopOf="@+id/btnPorcentaje"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnComa"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btncoma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintStart_toEndOf="@+id/btnNum0"
        app:layout_constraintTop_toTopOf="@+id/btnNum0"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.25" />

    <EditText
        android:id="@+id/txtOperacionesAritmeticas"
        android:layout_width="407dp"
        android:layout_height="81dp"
        android:cursorVisible="true"
        android:ems="10"
        android:inputType="number|text|numberDecimal"
        android:text="@string/txtoperacion"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

</androidx.constraintlayout.widget.ConstraintLayout>